// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputField rendering adds the error class if the error is set 1`] = `
<Layer
  className="TextInputField"
>
  <LabelLine
    error={true}
    htmlFor="random-id"
    text="Label"
  />
  <input
    aria-describedby="random-id-error"
    aria-invalid={true}
    className="TextInputField__input TextInputField--error"
    disabled={false}
    id="random-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value="value"
  />
  <FieldError
    id="random-id-error"
    text="Error"
  />
</Layer>
`;

exports[`TextInputField rendering renders expected elements 1`] = `
<Layer
  className="TextInputField"
>
  <LabelLine
    error={false}
    htmlFor="random-id"
    required={true}
    text="Label"
  />
  <input
    aria-describedby="random-id-helper"
    aria-invalid={false}
    aria-required={true}
    className="TextInputField__input"
    id="random-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value="value"
  />
  <FieldHelper
    id="random-id-helper"
    text="Helper text"
  />
</Layer>
`;

exports[`TextInputField rendering renders expected elements when className is set 1`] = `
<Layer
  className="TextInputField TestClass"
>
  <LabelLine
    error={false}
    htmlFor="random-id"
    text="Label"
  />
  <input
    aria-describedby="random-id-helper"
    aria-invalid={false}
    className="TextInputField__input"
    disabled={false}
    id="random-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value="value"
  />
  <FieldHelper
    id="random-id-helper"
  />
</Layer>
`;

exports[`TextInputField rendering renders expected elements when value is empty 1`] = `
<Layer
  className="TextInputField"
>
  <LabelLine
    error={false}
    htmlFor="random-id"
    text="Label"
  />
  <input
    aria-describedby="random-id-helper"
    aria-invalid={false}
    className="TextInputField__input"
    disabled={false}
    id="random-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value=""
  />
  <FieldHelper
    id="random-id-helper"
  />
</Layer>
`;
